--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <div class="left-side">
+        Test1
+
+    </div>
+    <div class="right-side">
+        Test2
+
+    </div>    
 </body>
 </html>
