--- a/index.html
+++ b/index.html
@@ -7,15 +7,45 @@
     <title>Sign-Up Form</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manjari&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="left-side">
-        Test1
-
+        
     </div>
     <div class="right-side">
-        Test2
+        <form action="#" method="post">
+            <section id="form-head">
+                <h1>DangIt Camping Sign-up</h1>
+                <p>
+                    This is not a real camping service! You know you need something like this in your life to help you realize your deepest dreams.
+                    <br>Sign up now to get started. <br><br> You know you want to.
+                </p>
+            </section>
 
+            <section id="form-middle">
+                <div id="left-form">
+                    <label for="fname">FIRST NAME:</label> <br>
+                    <input type="text" id="fname" name="fname"> <br><br>
+
+                    <label for="email">EMAIL:</label> <br>
+                    <input type="text" id="email" name="email">
+                </div>
+                <div id="right-form">
+                    <label for="lname">LAST NAME:</label> <br>
+                    <input type="text" id="lname" name="lname"><br><br>
+
+                    <label for="phnumber">PHONE NUMBER:</label> <br>
+                    <input type="text" id="phnumber" name="phnumber">
+                </div>
+            </section>
+
+            <section id="form-end">
+
+            </section>
+          </form>
     </div>    
 </body>
 </html>
