add logo and styling for logo

--- a/index.html
+++ b/index.html
@@ -12,14 +12,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manjari&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Syne+Mono&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="left-side">
-        
+        <div id="logo-div">
+            <img src="./images/logo.png" alt="logo">
+            <div>DI</div>
+        </div>
     </div>
     <div class="right-side">
         <div id="intro">
-            <h1>DangIt Camping Sign-up</h1>
+            <h1>Dang-It Camping Sign-up</h1>
             <p class="upper-text">
                 This is not a real camping service! You know you need something like this in your life to help you realize your deepest dreams.
                 <br>Sign up now to get started. <br><br> You know you want to.
