--- a/index.html
+++ b/index.html
@@ -30,34 +30,34 @@
             </p>
         </div>
         <div id="the-form">
-            <p class="upper-text">Let's do it!</p>
+            <p class="upper-text">Let's do it! Please fill out the form completely.</p>
             <!--novalidate deactivates the default form validation - we do form validation ourselves in js-->
             <form action="#" method="post" novalidate>
                 <section id="form-section-1">
                     <div id="left-form">
                         <label for="fname">FIRST NAME:</label> <br>
-                        <input type="text" id="fname" name="fname">  <br>
+                        <input type="text" id="fname" name="fname" required>  <br>
                         <span class="error fname-error" aria-live="polite"></span> <br><br>
 
                         <label for="email">EMAIL:</label> <br>
-                        <input type="email" id="email" name="email"> <br>
+                        <input type="email" id="email" name="email" required minlength="6" placeholder="example@something.com"> <br>
                         <span class="error email-error" aria-live="polite"></span><br><br>
 
                         <label for="password1">PASSWORD:</label> <br>
-                        <input type="text" id="password1" name="password1"> <br>
+                        <input type="password" id="password1" name="password1" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" required> <br>
                         <span class="error password1-error" aria-live="polite"></span>                
                     </div>
                     <div id="right-form">
                         <label for="lname">LAST NAME:</label> <br>
-                        <input type="text" id="lname" name="lname"> <br>
+                        <input type="text" id="lname" name="lname" required> <br>
                         <span class="error lname-error" aria-live="polite"></span><br><br>
 
                         <label for="phone">PHONE NUMBER:</label> <br>
-                        <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"> <br>
+                        <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="012-345-6789" required> <br>
                         <span class="error phone-error" aria-live="polite"></span><br><br>
 
                         <label for="password2">CONFIRM PASSWORD:</label> <br>
-                        <input type="text" id="password2" name="password2"> <br>
+                        <input type="password" id="password2" name="password2" required> <br>
                         <span class="error password2-error" aria-live="polite"></span>
                     </div>
                 </section>
